fixes the header shifting to the right

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ a:hover {
 
 .content {
 	width:100%;
-	margin-top: 4em;
+	padding-top: 4em;
 }
 
 .content-container {
